--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -25,7 +25,19 @@
         "eCommerceTitle":"E-Commerce: frontendmentor reto intermedio",
         "eCommerceDescription": "Construcción de una parte de un comercio electrónico, se puede ver las diferentes fotos del productos y añadir o quitar productos al carrito.",
         "rockPaperTitle":"Piedra papel tijeras: frontendmentor reto avanzado.",
-        "rockPaperDescription":"Juego interactivo de piedra papel o tijeras que puedes jugar contra el CPU."
+        "rockPaperDescription":"Juego interactivo de piedra papel o tijeras que puedes jugar contra el CPU.",
+        "RatingComponentTitle":"Componente  de puntuación",
+        "RatingComponentDescription":"Envía la puntuación de un cuestionario de satisfacción",
+        "AgeCalculatorTitle":"Calculadora de edad",
+        "AgeCalculatorDescription":"Calcula cuántos años tienes",
+        "TipCalculatorTitle":"Calculadora de propina",
+        "TipCalculatorDescription":"Calcula la propina dependiendo de las personas que sean",
+        "NotificationsPageTitle": "Pagina de notificaciones",
+        "NotificationsPageDescription":"Simulación de la vista de una página de notificaciones",
+        "CommentsSectionTitle":"Sección de comentarios",
+        "CommentsSectionDescription":"Simulación de una página de comentarios",
+        "CountdownTitle":"Cuenta atrás",
+        "CountdownDescription": "Cuenta atrás con algunos estilos añadidos"
     },
     "project": {
         "tables": "Tablas",
