accent mark added

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -32,7 +32,7 @@
         "AgeCalculatorDescription":"Calcula cuántos años tienes",
         "TipCalculatorTitle":"Calculadora de propina",
         "TipCalculatorDescription":"Calcula la propina dependiendo de las personas que sean",
-        "NotificationsPageTitle": "Pagina de notificaciones",
+        "NotificationsPageTitle": "Página de notificaciones",
         "NotificationsPageDescription":"Simulación de la vista de una página de notificaciones",
         "CommentsSectionTitle":"Sección de comentarios",
         "CommentsSectionDescription":"Simulación de una página de comentarios",
